atualização pre-lançamente  27/06/25

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/pngLogo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Pelada Nova Geração</title>
 </head>
 
